Langchain :: revoke api key

--- a/ceit490/w7/langchain.ipynb
+++ b/ceit490/w7/langchain.ipynb
@@ -251,7 +251,7 @@
     "\n",
     "from langchain_groq import ChatGroq\n",
     "\n",
-    "groq_api_key = \"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\" #TODO : Replace with your own API key\n",
+    "groq_api_key = #TODO : Replace with your own API key\n",
     "\n",
     "groq_prompt = ChatGroq(\n",
     "    groq_api_key=groq_api_key,\n",
